--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,12 +25,12 @@ coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-lifecycleRuntimeCompose = "2.8.0"
-lifecycleRuntimeKtx = "2.7.0"
-lifecycleLivedataKtx = "2.7.0"
-lifecycleViewmodelCompose = "2.7.0"
+lifecycleRuntimeCompose = "2.6.0"
+lifecycleRuntimeKtx = "2.6.0"
+lifecycleLivedataKtx = "2.6.0"
+lifecycleViewmodelCompose = "2.6.0"
 activityCompose = "1.8.2"
-composeBom = "2024.02.02"
+composeBom = "2024.05.00"
 loggingInterceptor = "4.10.0"
 materialIconsExtended = "1.6.7"
 mockk = "1.10.5"
@@ -64,6 +64,7 @@ androidx-junit-v113 = { module = "androidx.test.ext:junit", version.ref = "andro
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeCompose" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navVersion" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
