--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:windowSoftInputMode="adjustResize"
             android:name=".core.activities.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.FindIt">
+            android:theme="@style/Theme.FindIt.MySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
